crates/analyzer/tests/snapshots/errors__duplicate_typedef_in_module.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: duplicate type name
  ┌─ compile_errors/duplicate_typedef_in_module.fe:2:1
  │
2 │ type bar = u8
  │ ^^^^^^^^^^^^^ `bar` first defined here
3 │ 
4 │ type bar = u8
  │ ------------- `bar` redefined here


